docs/sf-export/sfdx-raw/objects/External_API_Details__c/External_API_Details__c.object-meta.xml
<CustomObject>
    <label>External API Details</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>External API Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External API Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>