docs/sf-export/sfdx-raw/objects/External_API_Details__c/fields/Application_Log__c.field-meta.xml
<CustomField>
    <fullName>Application_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Log</label>
    <referenceTo>Application_Log__c</referenceTo>
    <relationshipLabel>External API Details</relationshipLabel>
    <relationshipName>External_API_Details</relationshipName>
    <type>Lookup</type>
</CustomField>