docs/sf-export/sfdx-raw/objects/External_API_Details__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>