docs/sf-export/sfdx-raw/objects/External_API_Details__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>